# vhub

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  manage.py  pyproject.toml
.github/workflows/: ci.yml  python-app.yml
tests/: test_vhub.py
tests/lib/: test_data.py
vhub/: asgi.py  urls.py  wsgi.py
vhub/apps/accounts/: apps.py  serializers.py  urls.py  views.py
vhub/apps/accounts/tests/: test_login.py  test_register.py
vhub/apps/data/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
vhub/apps/data/migrations/: 0001_initial.py  0002_initial.py  0003_alter_data_publication_date.py
vhub/apps/data/tests/: test_views.py
vhub/apps/datasets/: apps.py  models.py  serializers.py  urls.py  views.py
vhub/apps/datasets/migrations/: 0001_initial.py  0002_initial.py
vhub/apps/datasets/tests/: test_views.py
vhub/apps/user/: apps.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
vhub/apps/user/migrations/: 0001_initial.py
vhub/apps/user/tests/: test_views.py
vhub/lib/: data.py
vhub/lib/tests/: test_data.py
vhub/settings/: dev.py
vhub/tests/: dataset_test.csv  dataset_test_2.csv  test_dump_datasets.json  test_dump_user.json
